test/classes/initializers/phase1/useAfterInit/passThisFn.good
passThisFn.chpl:10: In initializer:
passThisFn.chpl:15: error: cannot call a method on a record during phase 1 of initialization
